Changed everything from poche to wallabag

--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -11,7 +11,7 @@ iframe {
 </style>
 <body onload="populate_iframe()">
 <div id='configure_me'>
-  <h3>Welcome to Poche</h3>
+  <h3>Welcome to wallabag</h3>
   <b>please setup the extension by going in the Options menu.</b>
 </div>
 <iframe id='source' width='400' height='420'></iframe>  
