--- a/src/html/options.html
+++ b/src/html/options.html
@@ -4,8 +4,8 @@
 
 // Saves options to localStorage.
 function save_options() {
-  var poche_url = document.getElementById("poche_url").value;
-  alert(poche_url);
+  var wallabag_url = document.getElementById("wallabag_url").value;
+  alert(wallabag_url);
 
   localStorage["favorite_color"] = color;
 
@@ -19,7 +19,7 @@ function save_options() {
 
 // Restores select box state to saved value from localStorage.
 function restore_options() {
-  var favorite = localStorage["poche_configuration"];
+  var favorite = localStorage["wallabag_configuration"];
   if (!favorite) {
     return;
   }
@@ -37,8 +37,8 @@ function restore_options() {
 
 <body onload="restore_options()">
 
-Your Poche url:
-<input type='text' id='poche_url' value='http://host.domain.com/poche/' />
+Your wallabag url:
+<input type='text' id='wallabag_url' value='http://host.domain.com/wallabag/' />
 <br>
 <button onclick="save_options()">Save</button>
 </body>
