Add rudimentary API support, with fallback to web based posting

--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -9,7 +9,7 @@ iframe {
   display:none;
 }
 </style>
-<body onload="populate_iframe()">
+<body onload="postURL();">
 <div id='configure_me'>
   <h3>Welcome to wallabag</h3>
   <b>please setup the extension by going in the Options menu.</b>
